Add Sound Effects v5.0

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     <footer>
         <p>Sasaran Tamat: <span id="target-date">Mengira...</span></p>
-        <p style="font-size: 0.7em; opacity: 0.5;">Versi 4.9 (New Look)</p>
+        <p style="font-size: 0.7em; opacity: 0.5;">Versi 5.0 (Fun Update)</p>
         <button onclick="window.location.reload(true)" style="margin-top:10px; font-size:0.7em; padding:5px; background:rgba(0,0,0,0.1); border:none; border-radius:5px; color:inherit;">Paksa Refresh</button>
     </footer>
 
